[package]
name = "crypto-wasm-wxa"
version = "0.1.0"
authors = ["mryao <mryao@pku.edu.cn>"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.83"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.5", optional = true }

aes-gcm-siv = { version = "0.11.1", default-features = false, features = ["aes", "alloc"] }
base64ct = { version = "1.5.3", default-features = false, features = ["alloc"] }
getrandom = { version = "0.2.8", default-features = false, features = ["js"] }
p256 = { version = "0.11.1", default-features = false, features = ["ecdh", "ecdsa", "pem"] }
rand_core = { version = "0.6.4", default-features = false, features = ["getrandom"] }
sha2 = { version = "0.10.6", default-features = false }
x509-cert = { version = "0.1.1", default-features = false, features = ["pem"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.33"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
